--- a/css/style.css
+++ b/css/style.css
@@ -13,14 +13,21 @@ body {
 
 nav {
     padding: 1.1em;
+    margin-bottom: 2em;
+    border-bottom: 1px solid rgba(0,0,0,0.1);
+    background-color: rgba(255,255,255,0.5);
+}
+
+.navbar {
+    padding-top: 1em;
+    padding-bottom: 1em;
 }
 
 ul {
-    font-weight: 400;
+    font-size: 1.1rem;
 }
 
 .container {
-    margin: 0 5em;
     padding: 5em;
 }
 
